syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.recommendation";
option java_outer_classname = "Recommendation";
option objc_class_prefix = "RMD";
import "google/protobuf/empty.proto";

package recommendation;

service Genrator {
    rpc SendItems (google.protobuf.Empty) returns (ResponseItems) {}
}

message ResponseItems{
    string uniq_id = 1;
    string product_name = 2;
    string product_category_tree = 3;
    string pid = 4;
    double retail_price = 5;
    double discounted_price =6;
    string image = 7;
    string description = 8;
    double product_rating = 9;
    double overall_rating = 10;
}